--- a/.github/workflows/setup.yaml
+++ b/.github/workflows/setup.yaml
@@ -8,6 +8,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: "🖥️ Dowloading setup.sh script"
       run: wget -O ${GITHUB_WORKSPACE}/setup.sh https://raw.githubusercontent.com/gongcastro/setup/main/setup.sh | bash
+    - run: cat ${GITHUB_WORKSPACE}/setup.sh
     - name: "🚀 Running setup.sh script"
       run: |
         chmod +x ${GITHUB_WORKSPACE}/setup.sh
