--- a/.github/workflows/setup.yaml
+++ b/.github/workflows/setup.yaml
@@ -16,6 +16,7 @@ jobs:
       shell: bash
     - name: "Installing Git"
       run: setup git
+      shell: bash
     - run: echo "🎉 This job's status is ${{ job.status }}."
 
 
