--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,7 +7,12 @@ set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @plugin 'catppuccin/tmux'
 set -g @treemux-tree-nvim-init-file 'XDG_CONFIG_HOME/tmux/plugins/treemux/configs/treemux_init.lua'
 set -g @plugin 'kiyoon/treemux'
+set -g @plugin 'schasse/tmux-jump'
+set -g @plugin 'catppuccin/tmux'
+set -g @catppuccin_flavour 'mocha' # or frappe, macchiato, mocha
 
 set-option -g default-shell /bin/zsh
+#set-default colorset-option -ga terminal-overrides ",xterm-256color:Tc"
 
-run '$XDG_CONFIG_HOME/tmux/plugins/tpm/tpm'
+
+run '~/.config/tmux/plugins/tpm/tpm'
