--- a/tmux.conf
+++ b/tmux.conf
@@ -10,18 +10,20 @@ bind h select-pane -L
 bind j select-pane -D 
 bind k select-pane -U
 bind l select-pane -R
-
-# Start windows and panes at 1, not 0
-set -g base-index 1
-set -g pane-base-index 1
-set-window-option -g pane-base-index 1
-set-option -g renumber-windows on
+bind r source-file ~/.tmux.conf
 
 # Use Alt-arrow keys without prefix key to switch panes
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
+
+# Start windows and panes at 1, not 0
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
+set -g mouse on
 
 # Shift arrow to switch windows
 bind -n S-Left  previous-window
