--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,7 +12,8 @@ set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_flavour 'mocha' # or frappe, macchiato, mocha
 
 set-option -g default-shell /bin/zsh
-#set-default colorset-option -ga terminal-overrides ",xterm-256color:Tc"
-
+set -ga terminal-overrides ",xterm-256color:Tc"
 
 run '~/.config/tmux/plugins/tpm/tpm'
+
+
