--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,6 +11,16 @@ set -g @plugin 'schasse/tmux-jump'
 set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_flavour 'mocha' # or frappe, macchiato, mocha
 
+# Set the control character to Ctrl+Spacebar (instead of Ctrl+B)
+set -g prefix C-space
+unbind-key C-b
+bind-key C-space send-prefix
+
+# Set new panes to open in current directory
+bind c new-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
 set-option -g default-shell /bin/zsh
 set -ga terminal-overrides ",xterm-256color:Tc"
 
